--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/jquery.modal.css" media="screen">
-    <link rel="stylesheet" href="css/styles.css" media="screen">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Hymns for All Times</title>
 </head>
 
@@ -54,7 +55,7 @@
                 </div>
             </div>
         </div>
-        <div id="song" style="display: none"></div>
+        <div id="song" hidden></div>
     </div>
 
     <div id="controls">
@@ -65,20 +66,18 @@
         <button id="full"></button>
     </div>
 
-    <div id="overlay" style="display: none;">
+    <div id="overlay" class="overlay" hidden>
         <div class="close">
             <span>X</span>
         </div>
-        <div id="modal">  
+        <div id="modal">
             <div id="modalBody"></div>
         </div>
     </div>
 
-    <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.modal.min.js" type="text/javascript"></script>
-    <script src="js/elasticlunr.min.js" type="text/javascript"></script>
-    <script src="js/songs.js" type="text/javascript"></script>
-    <script src="js/hymns.js" type="text/javascript"></script>
+    <script defer src="js/elasticlunr.min.js" type="text/javascript"></script>
+    <script defer src="js/songs.js" type="text/javascript"></script>
+    <script defer src="js/hymns.js" type="text/javascript"></script>
 </body>
 
 </html>
