Fixed bug with some categories Added manual refresh button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span>101-200</span>
                     <span>201-300</span>
                     <span>301-400</span>
-                    <span>401-444</span>
+                    <span>401-443</span>
                 </div>
             </div>
         </div>
@@ -64,6 +64,7 @@
         <button id="size-down" disabled></button>
         <button id="index"></button>
         <button id="full"></button>
+        <button id="refresh"></button>
     </div>
 
     <div id="overlay" class="overlay" hidden>
