--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <button id="refresh"></button>
     </div>
 
-    <div id="overlay" class="overlay" hidden>
+    <div id="overlay" class="overlay">
         <div id="modal" class="modal">
             <div class="close">
                 <span>X</span>
