--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,9 @@
         </div>
     </div>
 
-    <script defer src="js/elasticlunr.min.js" type="text/javascript"></script>
-    <script defer src="js/hymns.js" type="text/javascript"></script>
+    <script src="js/elasticlunr.min.js"></script>
+    <script type="module" src="js/hymns.js"></script>
+    <script nomodule src="js/hymns.legacy.js"></script>
 </body>
 
 </html>
