NPM scripts + babel first integration

--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
     </div>
 
     <script src="js/elasticlunr.min.js"></script>
-    <script type="module" src="js/hymns.js"></script>
-    <script nomodule src="js/hymns.legacy.js"></script>
+    <script type="module" src="js/hymns.min.js"></script>
+    <script nomodule src="js/hymns.legacy.min.js"></script>
 </body>
 
 </html>
