--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,7 @@
         <title>Hymnal PWA</title>
     </head>
     <body>
-        <noscript>
-            You need to enable JavaScript to run this app.
-        </noscript>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
       This HTML file is a template.
