--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Hymnal PWA</title>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=PT+Sans&display=swap" rel="stylesheet" />
+        <title>Hymns for all Times</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
