--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=PT+Sans&display=swap" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
+            rel="stylesheet"
+        />
         <title>Hymns for all Times</title>
     </head>
     <body>
