--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#000000" />
-        <!--
+	<head>
+		<meta charset="utf-8" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="title" property="og:title" content="Hymns for All Times" />
+		<meta name="author" content="Keno Clayton" />
+		<meta name="revised" content="Saturday, March 27th, 2021, 6:00 am" />
+		<meta name="copyright" content="Clayton Innovations" />
+		<meta
+			name="description"
+			property="og:description"
+			content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+		/>
+
+		<meta property="og:image" content="%PUBLIC_URL%/social_banner_1.jpg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:url" content="http://hymnal.claytoninnovations.com" />
+		<meta name="twitter:card" content="summary_large_image" />
+
+		<meta property="og:site_name" content="Hymns for All Times" />
+		<meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
+
+		<!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,11 +38,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap" rel="stylesheet" />
-        <title>Hymns for all Times</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Hymns for all Times</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
