--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,37 @@
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="title" property="og:title" content="Hymns for All Times" />
 		<meta name="author" content="Keno Clayton" />
 		<meta name="revised" content="Saturday, March 27th, 2021, 6:00 am" />
 		<meta name="copyright" content="Clayton Innovations" />
+
+		<!-- Primary Meta Tags -->
+		<title>Hymns for all Times</title>
+		<meta name="title" content="Hymns for all Times" />
 		<meta
 			name="description"
-			property="og:description"
 			content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
 		/>
 
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://hymnal.claytoninnovations.com/" />
+		<meta property="og:title" content="Hymns for all Times" />
+		<meta
+			property="og:description"
+			content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+		/>
 		<meta property="og:image" content="%PUBLIC_URL%/social_banner_1.jpg" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
-		<meta property="og:url" content="http://hymnal.claytoninnovations.com" />
+
+		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://hymnal.claytoninnovations.com/" />
+		<meta property="twitter:title" content="Hymns for all Times" />
+		<meta
+			property="twitter:description"
+			content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+		/>
+		<meta property="twitter:image" content="%PUBLIC_URL%/social_banner_1.jpg" />
 
 		<meta property="og:site_name" content="Hymns for All Times" />
 		<meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
