--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
+        <link rel="manifest" href="/manifest.webmanifest" />
+        <link rel="apple-touch-icon" href="/icons/icon-192.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#000000" />
         <meta name="author" content="Keno Clayton" />
@@ -25,7 +27,7 @@
             property="og:description"
             content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
         />
-        <meta property="og:image" content="%PUBLIC_URL%/social_banner_1.jpg" />
+        <meta property="og:image" content="/social_banner_1.jpg" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image" />
@@ -35,7 +37,7 @@
             property="twitter:description"
             content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
         />
-        <meta property="twitter:image" content="%PUBLIC_URL%/social_banner_1.jpg" />
+        <meta property="twitter:image" content="/social_banner_1.jpg" />
 
         <meta property="og:site_name" content="Hymns for All Times" />
         <meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
@@ -44,13 +46,12 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
+      Notice the use of  in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
