Improved codebase formatting Process songs with vite only instead of cloud storage

--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="/favicon.ico" />
-        <link rel="manifest" href="/manifest.webmanifest" />
-        <link rel="apple-touch-icon" href="/icons/icon-192.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="author" content="Keno Clayton" />
-        <meta name="revised" content="Saturday, January 11th, 2025, 12:00 am" />
-        <meta name="copyright" content="Clayton Innovations" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Keno Clayton" />
+    <meta name="revised" content="Saturday, January 11th, 2025, 12:00 am" />
+    <meta name="copyright" content="Clayton Innovations" />
 
-        <!-- Primary Meta Tags -->
-        <title>Hymns for all Times</title>
-        <meta name="title" content="Hymns for all Times" />
-        <meta
-            name="description"
-            content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
-        />
+    <!-- Primary Meta Tags -->
+    <title>Hymns for all Times</title>
+    <meta name="title" content="Hymns for all Times" />
+    <meta
+      name="description"
+      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+    />
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://hymnal.claytoninnovations.com/" />
-        <meta property="og:title" content="Hymns for all Times" />
-        <meta
-            property="og:description"
-            content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
-        />
-        <meta property="og:image" content="/social_banner_1.jpg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hymnal.claytoninnovations.com/" />
+    <meta property="og:title" content="Hymns for all Times" />
+    <meta
+      property="og:description"
+      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+    />
+    <meta property="og:image" content="/social_banner_1.jpg" />
 
-        <!-- Twitter -->
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://hymnal.claytoninnovations.com/" />
-        <meta property="twitter:title" content="Hymns for all Times" />
-        <meta
-            property="twitter:description"
-            content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
-        />
-        <meta property="twitter:image" content="/social_banner_1.jpg" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hymnal.claytoninnovations.com/" />
+    <meta property="twitter:title" content="Hymns for all Times" />
+    <meta
+      property="twitter:description"
+      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+    />
+    <meta property="twitter:image" content="/social_banner_1.jpg" />
 
-        <meta property="og:site_name" content="Hymns for All Times" />
-        <meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
+    <meta property="og:site_name" content="Hymns for All Times" />
+    <meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
 
-        <!--
+    <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <!--
+    <!--
       Notice the use of  in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -55,25 +55,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            rel="preload"
-            as="style"
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
-        />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
-            rel="stylesheet"
-            media="print"
-            onload="this.onload=null;this.removeAttribute('media');"
-        />
-        <title>Hymns for all Times</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=PT+Sans&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload="this.onload=null;this.removeAttribute('media');"
+    />
+    <title>Hymns for all Times</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-        <script type="module" src="/src/index.tsx"></script>
-        <script data-goatcounter="https://hymnalci.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-    </body>
+    <script type="module" src="/src/index.tsx"></script>
+    <script
+      data-goatcounter="https://hymnalci.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
+  </body>
 </html>
