--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       media="print"
       onload="this.onload=null;this.removeAttribute('media');"
     />
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="881cd145-c99a-4d65-8853-523fd0204c21"></script>
     <title>Hymns for all Times</title>
   </head>
   <body>
@@ -74,10 +75,5 @@
     <div id="root"></div>
 
     <script type="module" src="/src/index.tsx"></script>
-    <script
-      data-goatcounter="https://hymnalci.goatcounter.com/count"
-      async
-      src="//gc.zgo.at/count.js"
-    ></script>
   </body>
 </html>
