Fixed a few issues mainly with SPA mode Modified the song display icon and added tooltips

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="apple-touch-icon" href="/launcher-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1890ff" />
     <meta name="author" content="Keno Clayton" />
     <meta name="revised" content="Saturday, January 11th, 2025, 12:00 am" />
     <meta name="copyright" content="Clayton Innovations" />
