Updated PWA icons and SEO tags

--- a/index.html
+++ b/index.html
@@ -2,58 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/launcher-192.png" />
+    <link rel="icon" href="/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" href="/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1890ff" />
     <meta name="author" content="Keno Clayton" />
-    <meta name="revised" content="Saturday, January 11th, 2025, 12:00 am" />
+    <meta name="revised" content="Monday, September 22nd, 2025, 8:00 am" />
     <meta name="copyright" content="Clayton Innovations" />
 
     <!-- Primary Meta Tags -->
-    <title>Hymns for all Times</title>
-    <meta name="title" content="Hymns for all Times" />
+    <title>Hymns for all Times | Hymnal App</title>
     <meta
       name="description"
-      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+      content="Enjoy a wide selection of Christian hymns for all times. Search, share and sing along! Installs onto your device for offline use."
     />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://hymnal.claytoninnovations.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hymnal.claytoninnovations.com/" />
-    <meta property="og:title" content="Hymns for all Times" />
+    <meta property="og:title" content="Hymns for all Times | Hymnal App" />
     <meta
       property="og:description"
-      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+      content="Enjoy a wide selection of Christian hymns for all times. Search, share and sing along! Installs onto your device for offline use."
     />
-    <meta property="og:image" content="/social_banner_1.jpg" />
+    <meta property="og:image" content="https://hymnal.claytoninnovations.com/social_banner.jpg" />
 
-    <!-- Twitter -->
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://hymnal.claytoninnovations.com/" />
-    <meta property="twitter:title" content="Hymns for all Times" />
+    <meta property="twitter:domain" content="hymnal.claytoninnovations.com" />
+    <meta property="twitter:url" content="https://hymnal.claytoninnovations.com" />
+    <meta name="twitter:title" content="Hymns for all Times | Hymnal App" />
     <meta
-      property="twitter:description"
-      content="Enjoy a wide selection of Christian hymns for all times. Both the young and the young at heart will enjoy the clean, friendly interface, and inspirational lyrics."
+      name="twitter:description"
+      content="Enjoy a wide selection of Christian hymns for all times. Search, share and sing along! Installs onto your device for offline use."
     />
-    <meta property="twitter:image" content="/social_banner_1.jpg" />
+    <meta name="twitter:image" content="https://hymnal.claytoninnovations.com/social_banner.jpg" />
+    <meta
+      name="twitter:image:alt"
+      content="Open hymnal with some sheet music, having the title overlayed on top"
+    />
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-    <meta property="og:site_name" content="Hymns for All Times" />
-    <meta name="twitter:image:alt" content="Hymnal with site title overlayed on top" />
-
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!--
-      Notice the use of  in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
@@ -66,7 +58,11 @@
       media="print"
       onload="this.onload=null;this.removeAttribute('media');"
     />
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="881cd145-c99a-4d65-8853-523fd0204c21"></script>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="881cd145-c99a-4d65-8853-523fd0204c21"
+    ></script>
     <title>Hymns for all Times</title>
   </head>
   <body>
