--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="%VITE_APP_URL%" />
+    <meta property="og:url" content="%DEPLOY_PRIME_URL%" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Hymns for all Times | Hymnal App" />
     <meta
       property="og:description"
       content="Enjoy a wide selection of Christian hymns for all times. Search, share and sing along! Installs onto your device for offline use."
     />
-    <meta property="og:image" content="%VITE_APP_URL%/social_banner.jpg" />
+    <meta property="og:image" content="%DEPLOY_PRIME_URL%/social_banner.jpg" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="hymnal.claytoninnovations.com" />
-    <meta property="twitter:url" content="%VITE_APP_URL%" />
+    <meta property="twitter:url" content="%DEPLOY_PRIME_URL%" />
     <meta name="twitter:title" content="Hymns for all Times | Hymnal App" />
     <meta
       name="twitter:description"
       content="Enjoy a wide selection of Christian hymns for all times. Search, share and sing along! Installs onto your device for offline use."
     />
-    <meta name="twitter:image" content="%VITE_APP_URL%/social_banner.jpg" />
+    <meta name="twitter:image" content="%DEPLOY_PRIME_URL%/social_banner.jpg" />
     <meta
       name="twitter:image:alt"
       content="Open hymnal with some sheet music, having the title overlayed on top"
